<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nhlBlueLight"
    tools:context="com.example.iosdev.nhl97.FeedFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAlignment="center"
            />
        </LinearLayout>
            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

    </LinearLayout>



</FrameLayout>
