<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iosdev.nhl97.ManageTeamsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="30dp">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="100dp"
                android:id="@+id/all_teams_selected"
                android:textAlignment="center"
                android:visibility="gone"
                android:text="@string/all_teams_selected"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_team"
                android:textAlignment="center"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:id="@+id/pick_your_team"/>
            <NumberPicker
                android:id="@+id/teamPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/teamName"
                android:textAlignment="center"
                android:paddingTop="15dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:id="@+id/nameEditText"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/addname"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
